force-app/main/default/objects/Claim__c/fields/Original_Ref_No__c.field-meta.xml
<CustomField>
    <fullName>Original_Ref_No__c</fullName>
    <description>Used to store original submission, a replacement (resubmission) of a previous claim, or a void/cancelation of a prior claim.</description>
    <label>Original Ref. No.</label>
    <type>TextArea</type>
</CustomField>