force-app/main/default/objects/Claim__c/fields/Other_Claim_Id__c.field-meta.xml
<CustomField>
    <fullName>Other_Claim_Id__c</fullName>
    <description>Used to store any additional identifiers associated with the claim. </description>
    <label>Other Claim ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>