force-app/main/default/objects/Claim__c/fields/Other_Date__c.field-meta.xml
<CustomField>
    <fullName>Other_Date__c</fullName>
    <description>Used to store date on which the patient or authorized person signed.</description>
    <label>Other Date</label>
    <type>Date</type>
</CustomField>