force-app/main/default/objects/Claim__c/fields/Other_ID__c.field-meta.xml
<CustomField>
    <fullName>Other_ID__c</fullName>
    <label>Other ID (17a)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0B</fullName>
            </value>
            <value>
                <fullName>1G</fullName>
            </value>
            <value>
                <fullName>G2</fullName>
            </value>
            <value>
                <fullName>LU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>