force-app/main/default/objects/Claim__c/fields/Other_Insurance_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Other_Insurance_Plan_Name__c</fullName>
    <description>Used to provide information about the name of the insurance plan or program under which the patient is covered.</description>
    <label>Insurance Plan Name</label>
    <length>28</length>
    <type>Text</type>
</CustomField>