force-app/main/default/objects/Claim__c/fields/Other_Insured_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Other_Insured_s_Name__c</fullName>
    <description>Used to provide the name of another individual who has health insurance coverage that may coordinate with the patient's primary insurance.</description>
    <inlineHelpText>The “Other Insured’s Name” indicates that there is a holder of another policy that maycover the patient.Use commas to separate the last name, first name, and middle initial. A hyphen can be used for hyphenated names. Do not use periods within the name.</inlineHelpText>
    <label>Other Insured&apos;s Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>