force-app/main/default/objects/Claim__c/fields/Other_Insured_s_Policy_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Other_Insured_s_Policy_Group_Number__c</fullName>
    <description> Used to enter the policy or group number associated with the other insured's health insurance coverage.</description>
    <label>Other Insured&apos;s Policy/Group Number</label>
    <length>28</length>
    <type>Text</type>
</CustomField>