force-app/main/default/objects/Claim__c/fields/Other_Payer_Name_B__c.field-meta.xml
<CustomField>
    <fullName>Other_Payer_Name_B__c</fullName>
    <description>Used to indicate the name and address of the secondary payer for the claim on UB04 Form.</description>
    <label>Other Payer Name B</label>
    <length>255</length>
    <type>Text</type>
</CustomField>