force-app/main/default/objects/Claim__c/fields/Other_Payer_Name_C__c.field-meta.xml
<CustomField>
    <fullName>Other_Payer_Name_C__c</fullName>
    <description>Used to indicate the name and address of the tertiary payer for the claim on UB04 Form.</description>
    <label>Other Payer Name C</label>
    <length>255</length>
    <type>Text</type>
</CustomField>