force-app/main/default/objects/Claim__c/fields/Other_Procedure_Code_B__c.field-meta.xml
<CustomField>
    <fullName>Other_Procedure_Code_B__c</fullName>
    <description>Used to store  additional procedure code.</description>
    <label>Other Procedure Code B</label>
    <length>255</length>
    <type>Text</type>
</CustomField>