force-app/main/default/objects/Claim__c/fields/Other_Procedure_Code_E__c.field-meta.xml
<CustomField>
    <fullName>Other_Procedure_Code_E__c</fullName>
    <description>Used to store  additional procedure code.</description>
    <label>Other Procedure Code E</label>
    <length>255</length>
    <type>Text</type>
</CustomField>