force-app/main/default/objects/Claim__c/fields/Other_Procedure_Date_A__c.field-meta.xml
<CustomField>
    <fullName>Other_Procedure_Date_A__c</fullName>
    <description>Used to store corresponding date of service of Other Procedure Code A.</description>
    <label>Other Procedure Date A</label>
    <type>Date</type>
</CustomField>