force-app/main/default/objects/Claim__c/fields/Other_Procedure_Date_B__c.field-meta.xml
<CustomField>
    <fullName>Other_Procedure_Date_B__c</fullName>
    <description>Used to store corresponding date of service of Other Procedure Code B.</description>
    <label>Other Procedure Date B</label>
    <type>Date</type>
</CustomField>