force-app/main/default/objects/Claim__c/fields/Other_Procedure_Date_C__c.field-meta.xml
<CustomField>
    <fullName>Other_Procedure_Date_C__c</fullName>
    <description>Used to store corresponding date of service of Other Procedure Code C.</description>
    <label>Other Procedure Date C</label>
    <type>Date</type>
</CustomField>