force-app/main/default/objects/Claim__c/fields/Other_Procedure_Date_D__c.field-meta.xml
<CustomField>
    <fullName>Other_Procedure_Date_D__c</fullName>
    <description>Used to store corresponding date of service of Other Procedure Code D.</description>
    <label>Other Procedure Date D</label>
    <type>Date</type>
</CustomField>