force-app/main/default/objects/Claim__c/fields/Other_Procedure_Date_E__c.field-meta.xml
<CustomField>
    <fullName>Other_Procedure_Date_E__c</fullName>
    <description>Used to store corresponding date of service of Other Procedure Code E.</description>
    <label>Other Procedure Date E</label>
    <type>Date</type>
</CustomField>