force-app/main/default/objects/Claim__c/fields/Other_Provider_LastName_1__c.field-meta.xml
<CustomField>
    <fullName>Other_Provider_LastName_1__c</fullName>
    <description>Refer additional healthcare provider Last Name.</description>
    <label>Other Provider LastName 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>