force-app/main/default/objects/Claim__c/fields/Other_Provider_NPI_2__c.field-meta.xml
<CustomField>
    <fullName>Other_Provider_NPI_2__c</fullName>
    <description>Refer additional healthcare provider identifier/NPI .</description>
    <label>Other Provider NPI 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>