force-app/main/default/objects/Claim__c/fields/Other_Provider_Qualifying_Id_2__c.field-meta.xml
<CustomField>
    <fullName>Other_Provider_Qualifying_Id_2__c</fullName>
    <description>Refer additional healthcare provider Qualifier Id .</description>
    <label>Other Provider Qualifying ID 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>