force-app/main/default/objects/Claim__c/fields/Outside_Lab__c.field-meta.xml
<CustomField>
    <fullName>Outside_Lab__c</fullName>
    <label>Outside Lab</label>
    <length>3</length>
    <type>Text</type>
</CustomField>