force-app/main/default/objects/Claim__c/fields/Outside_Lab_Charges__c.field-meta.xml
<CustomField>
    <fullName>Outside_Lab_Charges__c</fullName>
    <description>Used to store charges taken by an outside laboratory. </description>
    <label>Outside Lab Charges ($)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>