force-app/main/default/objects/Claim__c/fields/Outside_Lab_new__c.field-meta.xml
<CustomField>
    <fullName>Outside_Lab_new__c</fullName>
    <description>Used to indicate whether a service was provided by an outside laboratory. </description>
    <defaultValue>false</defaultValue>
    <label>Outside Lab New</label>
    <type>Checkbox</type>
</CustomField>