force-app/main/default/objects/Claim__c/fields/Patient_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Patient_Account_Number__c</fullName>
    <description>Account Number is a unique identifier assigned to each patient's account.</description>
    <inlineHelpText>Please use numbers between 1-9 only</inlineHelpText>
    <label>Patient Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>