force-app/main/default/objects/Claim__c/fields/Patient_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Patient_Address_2__c</fullName>
    <description>Used to store second address of patient.</description>
    <label>Patient Address 2</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>