force-app/main/default/objects/Claim__c/fields/Patient_Condition_Related_To_Employment__c.field-meta.xml
<CustomField>
    <fullName>Patient_Condition_Related_To_Employment__c</fullName>
    <description> Refers condition is related or unrelated to employment</description>
    <defaultValue>false</defaultValue>
    <label>Patient Condition Related To Employment</label>
    <type>Checkbox</type>
</CustomField>