force-app/main/default/objects/Claim__c/fields/Patient_Condition_to_Other_Accident__c.field-meta.xml
<CustomField>
    <fullName>Patient_Condition_to_Other_Accident__c</fullName>
    <description> Refers patient's condition or injury is directly related or not related to any type of accident other than an auto accident.</description>
    <defaultValue>false</defaultValue>
    <label>Patient Condition to Other Accident</label>
    <type>Checkbox</type>
</CustomField>