force-app/main/default/objects/Claim__c/fields/Patient_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Patient_Country_Code__c</fullName>
    <description>Indicates the Country Code of the patient.</description>
    <label>Patient Country Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>