force-app/main/default/objects/Claim__c/fields/Patient_Discharge_Status__c.field-meta.xml
<CustomField>
    <fullName>Patient_Discharge_Status__c</fullName>
    <description>Indicate the patient's status and intended destination upon discharge from the healthcare facility.</description>
    <label>Patient Discharge Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>