force-app/main/default/objects/Claim__c/fields/Patient_DOB__c.field-meta.xml
<CustomField>
    <fullName>Patient_DOB__c</fullName>
    <description>Used to store patient's date of birth.</description>
    <label>Patient DOB</label>
    <type>Date</type>
</CustomField>