force-app/main/default/objects/Claim__c/fields/Patient_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_First_Name__c</fullName>
    <description>Used to store patient's first name.</description>
    <label>Patient First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>