force-app/main/default/objects/Claim__c/fields/Patient_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Last_Name__c</fullName>
    <description>Used to store patient's last name.</description>
    <label>Patient Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>