force-app/main/default/objects/Claim__c/fields/Patient_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Name__c</fullName>
    <description>Used to store patient's  name.</description>
    <inlineHelpText>Use commas to separate the last name, first name, and middle initial.</inlineHelpText>
    <label>Patient Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>