force-app/main/default/objects/Claim__c/fields/Patient_Or_Auth_Per_Sign__c.field-meta.xml
<CustomField>
    <fullName>Patient_Or_Auth_Per_Sign__c</fullName>
    <label>Patient Or Auth Per-Sign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>