force-app/main/default/objects/Claim__c/fields/Patient_Or_Auth_Person_Date__c.field-meta.xml
<CustomField>
    <fullName>Patient_Or_Auth_Person_Date__c</fullName>
    <label>Patient Or Auth Person - Date</label>
    <type>Date</type>
</CustomField>