force-app/main/default/objects/Claim__c/fields/Patient_Relationship_to_Insured_C__c.field-meta.xml
<CustomField>
    <fullName>Patient_Relationship_to_Insured_C__c</fullName>
    <description>Code that reflects the patient's relationship to the insured person of Tertiary.</description>
    <label>Patient Relationship to Insured C</label>
    <length>100</length>
    <type>Text</type>
</CustomField>