force-app/main/default/objects/Claim__c/fields/Patient_s_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Patient_s_Address_2__c</fullName>
    <description>Used to store patient's second address.</description>
    <label>Patient&apos;s Address 2 - STALE</label>
    <type>TextArea</type>
</CustomField>