force-app/main/default/objects/Claim__c/fields/Patient_s_Address__c.field-meta.xml
<CustomField>
    <fullName>Patient_s_Address__c</fullName>
    <description>Used to store patient's address.</description>
    <label>Patient’s Address</label>
    <type>TextArea</type>
</CustomField>