force-app/main/default/objects/Claim__c/fields/Patient_s_City__c.field-meta.xml
<CustomField>
    <fullName>Patient_s_City__c</fullName>
    <description>Used to store patient's city name.</description>
    <label>Patient’s City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>