force-app/main/default/objects/Claim__c/fields/Patient_s_Phone__c.field-meta.xml
<CustomField>
    <fullName>Patient_s_Phone__c</fullName>
    <description>Used to store patient's phone.</description>
    <label>Patient&apos;s Phone</label>
    <type>Phone</type>
</CustomField>