force-app/main/default/objects/Claim__c/fields/Patient_s_Reason_for_Visit_Code__c.field-meta.xml
<CustomField>
    <fullName>Patient_s_Reason_for_Visit_Code__c</fullName>
    <description>Refer International Classification of Diseases code that best describes the reason for the patient's visit.</description>
    <label>Patient’s Reason for Visit Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>