force-app/main/default/objects/Claim__c/fields/Patient_s_State__c.field-meta.xml
<CustomField>
    <fullName>Patient_s_State__c</fullName>
    <description>Used to store patient's state.</description>
    <label>Patient’s State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>