force-app/main/default/objects/Claim__c/fields/Patient_s_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Patient_s_Zipcode__c</fullName>
    <description>Used to store patient's zipcode.</description>
    <label>Patient’s Zipcode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>