force-app/main/default/objects/Claim__c/fields/Patient_Sex__c.field-meta.xml
<CustomField>
    <fullName>Patient_Sex__c</fullName>
    <description>Refer patient's gender.</description>
    <label>Patient Sex</label>
    <length>29</length>
    <type>Text</type>
</CustomField>