force-app/main/default/objects/Claim__c/fields/Patient_Signature__c.field-meta.xml
<CustomField>
    <fullName>Patient_Signature__c</fullName>
    <description>Refer the patient (or their authorized representative) grants permission for the release of any medical or other information necessary to process the claim.</description>
    <label>Patient Signature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>