force-app/main/default/objects/Claim__c/fields/Patient_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Patient_Zip_Code__c</fullName>
    <description>Used to store patient's zipcode.</description>
    <label>Patient Zip Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>