force-app/main/default/objects/Claim__c/fields/Pay_to_Provider_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Pay_to_Provider_Address_1__c</fullName>
    <description>Used to specify address 1 of pay-to provider.</description>
    <label>Pay to Provider Address 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>