force-app/main/default/objects/Claim__c/fields/Pay_to_Provider_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Pay_to_Provider_Address_2__c</fullName>
    <description>Used to specify address 2 of pay-to provider.</description>
    <label>Pay to Provider Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>