force-app/main/default/objects/Claim__c/fields/Pay_to_Provider_City__c.field-meta.xml
<CustomField>
    <fullName>Pay_to_Provider_City__c</fullName>
    <description>Used to specify city of pay-to provider.</description>
    <label>Pay to Provider City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>