force-app/main/default/objects/Claim__c/fields/Pay_to_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Pay_to_Provider_Name__c</fullName>
    <description>Used to specify the pay-to provider, which is the entity or individual to whom payment should be directed.</description>
    <label>Pay to Provider Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>