force-app/main/default/objects/Claim__c/fields/Pay_to_Provider_State__c.field-meta.xml
<CustomField>
    <fullName>Pay_to_Provider_State__c</fullName>
    <description>Used to specify state of pay-to provider.</description>
    <label>Pay to Provider State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>