force-app/main/default/objects/Claim__c/fields/Pay_to_Provider_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Pay_to_Provider_Zipcode__c</fullName>
    <description>Used to specify zipcode of pay-to provider.</description>
    <label>Pay to Provider Zipcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>