force-app/main/default/objects/Claim__c/fields/Payer_ID__c.field-meta.xml
<CustomField>
    <fullName>Payer_ID__c</fullName>
    <description>Used to store payer Id.</description>
    <label>Payer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>