force-app/main/default/objects/Claim__c/fields/Payer_Order__c.field-meta.xml
<CustomField>
    <fullName>Payer_Order__c</fullName>
    <description>Represents type of claim.</description>
    <label>Payer Order</label>
    <length>100</length>
    <type>Text</type>
</CustomField>