force-app/main/default/objects/Claim__c/fields/Payerid__c.field-meta.xml
<CustomField>
    <fullName>Payerid__c</fullName>
    <description>Primary payer's health plan ID.</description>
    <label>Payerid</label>
    <length>100</length>
    <type>Text</type>
</CustomField>