force-app/main/default/objects/Claim__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automated Clearing House (ACH)</fullName>
            </value>
            <value>
                <fullName>Cash Concentration/Disbursement plus Addenda (CCD+) (ACH)</fullName>
            </value>
            <value>
                <fullName>Corporate Trade Exchange (CTX) (ACH)</fullName>
            </value>
            <value>
                <fullName>Check Federal Reserve Funds/Wire Transfer - Non-repetitive</fullName>
            </value>
            <value>
                <fullName>vPayment</fullName>
            </value>
            <value>
                <fullName>Non-Payment Data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>