force-app/main/default/objects/Claim__c/fields/Payor__c.field-meta.xml
<CustomField>
    <fullName>Payor__c</fullName>
    <description>Refer payer of the insurance.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payor</label>
    <referenceTo>Payor__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>