force-app/main/default/objects/Claim__c/fields/Place_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Service__c</fullName>
    <description> Indicates the location where a healthcare service was provided.</description>
    <label>Place of Service</label>
    <length>100</length>
    <type>Text</type>
</CustomField>