force-app/main/default/objects/Claim__c/fields/Posted__c.field-meta.xml
<CustomField>
    <fullName>Posted__c</fullName>
    <description>Indicates claim is reconciled or not.</description>
    <defaultValue>false</defaultValue>
    <label>Posted</label>
    <type>Checkbox</type>
</CustomField>