force-app/main/default/objects/Claim__c/fields/PPS_Code__c.field-meta.xml
<CustomField>
    <fullName>PPS_Code__c</fullName>
    <description>Used to store prospective payment system (PPS) code.</description>
    <label>PPS Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>