force-app/main/default/objects/Claim__c/fields/Primary_Claim_Status__c.field-meta.xml
<CustomField>
    <fullName>Primary_Claim_Status__c</fullName>
    <label>Primary Claim Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Saved</fullName>
            </value>
            <value>
                <fullName>Ready to Submit</fullName>
            </value>
            <value>
                <fullName>Sent to Clearing House</fullName>
            </value>
            <value>
                <fullName>Clearing House Accepted</fullName>
            </value>
            <value>
                <fullName>Clearing House Rejected</fullName>
            </value>
            <value>
                <fullName>Payer Accepted</fullName>
            </value>
            <value>
                <fullName>Payer Rejected</fullName>
            </value>
            <value>
                <fullName>ERA received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>