force-app/main/default/objects/Claim__c/fields/Primary_Patient_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Primary_Patient_Responsibility__c</fullName>
    <description>Indicates Patient Responsibiltiy amount of claim.</description>
    <defaultValue>0</defaultValue>
    <label>Patient Responsibility</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>