force-app/main/default/objects/Claim__c/fields/Principle_Procedure_Date__c.field-meta.xml
<CustomField>
    <fullName>Principle_Procedure_Date__c</fullName>
    <description>Used to store primary procedure code corresponding date of service.</description>
    <label>Principle Procedure Date</label>
    <type>Date</type>
</CustomField>