force-app/main/default/objects/Claim__c/fields/Prior_Authorization_Number__c.field-meta.xml
<CustomField>
    <fullName>Prior_Authorization_Number__c</fullName>
    <description>Unique identifier assigned by an insurance company or payer to approve a specific healthcare service or treatment before it is provided to a patient.</description>
    <label>Prior Authorization Number</label>
    <type>TextArea</type>
</CustomField>