force-app/main/default/objects/Claim__c/fields/Prior_Payments_C__c.field-meta.xml
<CustomField>
    <fullName>Prior_Payments_C__c</fullName>
    <description> Used to report any amounts already paid by other insurance payers for the services billed. </description>
    <label>Prior Payments C</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>