force-app/main/default/objects/Claim__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description> Indicates priority level of claim. </description>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
                <color>#CC0000</color>
                <label>Critical</label>
            </value>
            <value>
                <fullName>Medium</fullName>
                <color>#FFCC33</color>
                <label>Medium</label>
            </value>
            <value>
                <fullName>Low</fullName>
                <color>#78C953</color>
                <default>true</default>
                <label>Low</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>