force-app/main/default/objects/Claim__c/fields/Procedure_Code__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Code__c</fullName>
    <description> Used to store primary procedure code. </description>
    <label>Procedure Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>