force-app/main/default/objects/Claim__c/fields/QUAL_For_Date_current_illness_injury__c.field-meta.xml
<CustomField>
    <fullName>QUAL_For_Date_current_illness_injury__c</fullName>
    <description> Associated with the date qualifiers used in Box 14 (Date of Current Illness, Injury, or Pregnancy) on the CMS-1500 form.  </description>
    <label>QUAL For : Date/current illness/injury</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>431</fullName>
            </value>
            <value>
                <fullName>484</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>