force-app/main/default/objects/Claim__c/fields/QUAL_For_Name_of_referring_provider__c.field-meta.xml
<CustomField>
    <fullName>QUAL_For_Name_of_referring_provider__c</fullName>
    <description>Refer qualifiers to provide additional information or clarification about certain data elements.</description>
    <label>QUAL For : Name of referring provider_17</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DN</fullName>
            </value>
            <value>
                <fullName>DK</fullName>
            </value>
            <value>
                <fullName>DQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>