force-app/main/default/objects/Claim__c/fields/QUAL_For_Other_Dates__c.field-meta.xml
<CustomField>
    <fullName>QUAL_For_Other_Dates__c</fullName>
    <description>Associated with the date qualifiers used in Box 15 (Other DATE) on the CMS-1500 form. </description>
    <label>QUAL For : Other Dates</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>454</fullName>
            </value>
            <value>
                <fullName>304</fullName>
            </value>
            <value>
                <fullName>453</fullName>
            </value>
            <value>
                <fullName>439</fullName>
            </value>
            <value>
                <fullName>455</fullName>
            </value>
            <value>
                <fullName>471</fullName>
            </value>
            <value>
                <fullName>090</fullName>
            </value>
            <value>
                <fullName>091</fullName>
            </value>
            <value>
                <fullName>444</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>